# Rooney2025ApJ...987...61R

./: README.md
data/: 50kms-off-source-spectrum-fromfits.txt  50kms-off-source-spectrum-region.reg  Lamarche_SDP11_original.data  Litke2019_CII_FIR_original.data  SDSSJ1000_CII_mom0_pbcor.fits  SDSSJ1000_cont_pbcor.fits  alma_atmo_expanded.data  barecat_oldsources_retyped.fits  fulloforions.csv  gullberg2018_GOALS.data  gullberg2018_smg+qso.data  oi_sdssj1000_spectrumdata_machine_readable.csv  pdrt_model_cii_fir.npy  pdrt_model_log_erg_axis_coords.npy  sdp81.data  smith2017.data  table_aless_49_new_140mas.data  table_aless_57_new_140mas.data
data/archival_data/: 0001_150.15833000_2.13944000_COSMOS_VLA_90cm.fits  0001_150.15833000_2.13944000_vla_20cm_dp_sin_10.fits  SDSSJ100_ACS_astrometric_calib30mas.fits
pdr_model/: PDR_CO.ipynb  pyproject.toml
pdrtpy/pdrtpy/models/wolfirekaufman/version2020/constant_density/z=1/: CII158_CO43sm.fits  models.tab
pdrtpy/pdrtpy/plot/: lineratioplot.py
src/: Herschel.ipynb  PDR_CO.ipynb  README.md  jwst.ipynb  pyproject.toml
