[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corner>=2.2.3",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "numba>=0.62.1",
    "pdrtpy>=2.4.4",
    "regions>=0.10",
    "spectral-cube>=0.6.6",
    "zeustools-nanoexplorer",
]

[tool.uv.sources]
zeustools-nanoexplorer = { git = "https://github.com/nanoexplorer/zeustools" }
